--- a/elements.html
+++ b/elements.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Solid State by HTML5 UP
+	Kevin Duong by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Elements - Solid State by HTML5 UP</title>
+		<title>Kevin Duong</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Kevin Duong</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -35,8 +35,6 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
