updated contact info

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Solid State by HTML5 UP
+	Kevin Duong by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Kevin Duong</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Kevin Duong</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -35,8 +35,6 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -46,7 +44,7 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-diamond"></span></div>
-							<h2>This is Solid State</h2>
+							<h2>This is Kevin Duong</h2>
 							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
 						</div>
 					</section>
@@ -153,7 +151,7 @@
 							</form>
 							<ul class="contact">
 								<li class="fa-home">
-									Untitled Inc<br />
+									Kevin Duong<br />
 									1234 Somewhere Road Suite #2894<br />
 									Nashville, TN 00000-0000
 								</li>
@@ -164,7 +162,7 @@
 								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Kevin Duong All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
