--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-diamond"></span></div>
 							<h2>This is Kevin Duong</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<p>WEB DEVELOPER + PROBLEM SOLVER + PROGRAMMER</a></p>
 						</div>
 					</section>
 
@@ -91,7 +91,7 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
+									<h2 class="major">Projects</h2>
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 									<section class="features">
 										<article>
@@ -130,7 +130,7 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
+							<h2 class="major">Contact Me</h2>
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 							<form method="post" action="#">
 								<div class="field">
@@ -152,14 +152,13 @@
 							<ul class="contact">
 								<li class="fa-home">
 									Kevin Duong<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									San Jose, CA, 95130<br />
 								</li>
-								<li class="fa-phone">(000) 000-0000</li>
-								<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="fa-phone">(408) 781-1798</li>
+								<li class="fa-envelope"><a href="#">kduong781@gmail.com</a></li>
+								<li class="fa-facebook"><a href="#">facebook.com/KevDuong</a></li>
+								<li class="fa-linkedin"><a href="#">linkedin.com/in/kduong781</a></li>
+								<li class="fa-github"><a href="#">github.com/kduong781</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Kevin Duong All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
