--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-diamond"></span></div>
+							<div class="logo"><span class="icon fa-github"></span></div>
 							<h2>This is Kevin Duong</h2>
 							<p>WEB DEVELOPER + PROBLEM SOLVER + PROGRAMMER</a></p>
 						</div>
@@ -55,10 +55,10 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/images.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">ABOUT</h2>
+										<p>My name is Kevin Duong and I am a programmer and problem solver. I specialize in creating websites from scratch using technologies such as the LAMP stack, Bootstrap, and many others. Most of my software development experience is with Java, but you can find me messing around with many other languages.  </p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -67,10 +67,18 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/csulb.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">EDUCATION</h2>
+										<h4>Bachelors of Science in Computer Science</h4>
+										<h5>Minor in Web Technologies and Applications</h5>
+										<p>Course Work: Web Programming,
+Data Structures and Algorithms, Object Oriented
+Application Development, C++ for Java
+Programmers, Database Fundamentals, Software
+Engineering, Mobile Applications, Web Design</p>
+
+<p>Graduated in May 2017 (GPA: 3.45)</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -79,10 +87,10 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/acm.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">INVOLVEMENT</h2>
+										<p>Was an active member in the Association of Computing Machinery at CSULB. Attended meetings, workshops and hackathons hosted by CSULB ACM. Also teamed up with peers to compete in seasonal ACM programming competitions.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -92,30 +100,30 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Projects</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<p>Below you can find projects I have done over the years for school projects as well as personal projects I have done just for fun.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/mejk.png" alt="" /></a>
+											<h3 class="major">MEJK</h3>
+											<p>A prototype of an parking exchange app that allows students to easily find parking. Uses Android, Java, XML, Google Maps API.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/kidsfirst.png" alt="" /></a>
+											<h3 class="major">Kids First OC</h3>
+											<p>A modern redesign of a non profit organization's old website. Uses WordPress, HTML, CSS, Jquery, Bootstrap, PHP. </p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/chinastar.png" alt="" /></a>
+											<h3 class="major">China Starlite</h3>
+											<p>A e-commerce site for an Chinese Restaurant that includes online ordering with a reward system. Implemented with client/server side validation. Uses the LAMP stack.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/rwdoor.png" alt="" /></a>
+											<h3 class="major">RW Doors</h3>
+											<p>A web application that keeps tracks of orders and information for a Door company. Uses J2EE, XHTML, MySQL, JSF and AWS RDS. </p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
