added projects desc and git links

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Kevin Duong - Home</title>
+		<title>Kevin Duong - Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -39,63 +39,13 @@
 						</div>
 					</nav>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<div class="logo"><span class="icon fa-github"></span></div>
-							<h2>This is Kevin Duong</h2>
-							<p>WEB DEVELOPER + PROBLEM SOLVER + PROGRAMMER</a></p>
-						</div>
-					</section>
+          <section id="banner">
+          </section>
+
 
 				<!-- Wrapper -->
 					<section id="wrapper">
 
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/images.png" alt="" /></a>
-									<div class="content">
-										<h2 class="major">ABOUT</h2>
-										<p>My name is Kevin Duong and I am a programmer and problem solver. I specialize in creating websites from scratch using technologies such as the LAMP stack, Bootstrap, and many others. Most of my software development experience is with Java, but you can find me messing around with many other languages.  </p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/csulb.png" alt="" /></a>
-									<div class="content">
-										<h2 class="major">EDUCATION</h2>
-										<h4>Bachelors of Science in Computer Science</h4>
-										<h5>Minor in Web Technologies and Applications</h5>
-										<p>Course Work: Web Programming,
-Data Structures and Algorithms, Object Oriented
-Application Development, C++ for Java
-Programmers, Database Fundamentals, Software
-Engineering, Mobile Applications, Web Design</p>
-
-<p>Graduated in May 2017 (GPA: 3.45)</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/acm.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">INVOLVEMENT</h2>
-										<p>Was an active member in the Association of Computing Machinery at CSULB. Attended meetings, workshops and hackathons hosted by CSULB ACM. Also teamed up with peers to compete in seasonal ACM programming competitions.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Projects</h2>
@@ -125,10 +75,72 @@ Engineering, Mobile Applications, Web Design</p>
 											<p>A web application that keeps tracks of orders and information for a Door company. Uses J2EE, XHTML, MySQL, JSF and AWS RDS. </p>
 											<a href="https://github.com/kduong781/RWDoors-AWS" class="special">Learn more</a>
 										</article>
+
+                    <article>
+                      <a href="#" class="image"><img src="images/cloudlion.png" alt="" /></a>
+                      <h3 class="major">Cloud Lion</h3>
+                      <p>A cloud based IDE web app that allows users to code online on a text editor with syntax highlighting. Uses Java, Spring Boot, SQL, Thymeleaf, Bootstrap, Jquery HTML, CSS, Javascript. </p>
+                      <a href="https://github.com/alekskivuls/CloudLion" class="special">Learn more</a>
+                    </article>
+
+                    <article>
+                      <a href="#" class="image"><img src="images/todo.png" alt="" /></a>
+                      <h3 class="major">To Do List</h3>
+                      <p>A basic to do list that was done for fun in my free time. Uses HTML, CSS, Javascript, PHP, Bootstrap, Jquery. </p>
+                      <a href="https://github.com/kduong781/ToDoList" class="special">Learn more</a>
+                    </article>
+
+                    <article>
+                      <a href="#" class="image"><img src="images/snake.png" alt="" /></a>
+                      <h3 class="major">Snake</h3>
+                      <p>A modified version of snake that creates obstacles every time a snake eats the mouse five times. Uses Java, Java GUI. </p>
+                      <a href="#" class="special">Learn more</a>
+                    </article>
+
+                    <article>
+                      <a href="#" class="image"><img src="images/gameviewer.png" alt="" /></a>
+                      <h3 class="major">Game Viewer</h3>
+                      <p>A program that uses inheritance to create Tic Tac Toe, Othello and Connect Four. Uses C++. </p>
+                      <a href="https://github.com/kduong781/GameViewer" class="special">Learn more</a>
+                    </article>
+
+                    <article>
+                      <a href="#" class="image"><img src="images/dungeon.png" alt="" /></a>
+                      <h3 class="major">Dungeon Crawler</h3>
+                      <p>A program used to simulate a basic dungeon crawler game with monsters and items using OOP. Uses Java, Java GUI. </p>
+                      <a href="https://github.com/kduong781/DungeonCrawlerGUI" class="special">Learn more</a>
+                    </article>
+
+                    <article>
+                      <a href="#" class="image"><img src="images/tank.png" alt="" /></a>
+                      <h3 class="major">Atari Tanks</h3>
+                      <p>A atari tank game with AI and collision detection. Uses Java, Java GUI. </p>
+                      <a href="https://github.com/kduong781/Tank" class="special">Learn more</a>
+                    </article>
+
+
+                    <article>
+                      <a href="#" class="image"><img src="images/rps.png" alt="" /></a>
+                      <h3 class="major">Rock Paper Scissors AI</h3>
+                      <p>A rock paper scissors ai that keeps tracks of your pattern and makes best move using HashMap. Uses Java. </p>
+                      <a href="#" class="special">Learn more</a>
+                    </article>
+
+                    <article>
+                      <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+                      <h3 class="major">Online Paint</h3>
+                      <p>A web application that allows users to login and edit and edit an image with paint. Uses LAMP, PDO, HTML, CSS, AWS RDS, Creative SDK, Javascript, Bootstrap, Jquery. </p>
+                      <a href="https://github.com/kduong781/paint" class="special">Learn more</a>
+                    </article>
+
+                    <article>
+                      <a href="#" class="image"><img src="images/webfilter.png" alt="" /></a>
+                      <h3 class="major">Basic Web Filter</h3>
+                      <p>A basic web application that blocks websites from a list retreived from a database. User can delete, edit and add multiple blocked websites. Uses LAMP, PDO, CSS, Javascript, Bootstrap, Jquery. </p>
+                      <a href="https://github.com/kduong781/phpbuild" class="special">Learn more</a>
+                    </article>
+
 									</section>
-									<ul class="actions">
-										<li><a href="projects.html" class="button">Browse All</a></li>
-									</ul>
 								</div>
 							</section>
 
@@ -168,7 +180,7 @@ Engineering, Mobile Applications, Web Design</p>
 								<li class="fa-github"><a href="#">github.com/kduong781</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Kevin Duong 2017 All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Kevin Duong All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
