deleted learn more for sections and updated contact section

--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
 						</div>
 					</nav>
 
-          <section id="banner">
+          <section class="project" id="banner">
           </section>
 
 
@@ -147,43 +147,43 @@
 					</section>
 
 				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Contact Me</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input type="email" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="4"></textarea>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<li class="fa-home">
-									Kevin Duong<br />
-									San Jose, CA, 95130<br />
-								</li>
-								<li class="fa-phone">(408) 781-1798</li>
-								<li class="fa-envelope"><a href="#">kduong781@gmail.com</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/KevDuong</a></li>
-								<li class="fa-linkedin"><a href="#">linkedin.com/in/kduong781</a></li>
-								<li class="fa-github"><a href="#">github.com/kduong781</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Kevin Duong All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
+        <section id="footer">
+          <div class="inner">
+            <h2 class="major">Contact Me</h2>
+            <p>If you want to know some more information or are interested in working together, feel free to contact me through one of the channels below.</p>
+            <form method="post" action="mailto:kduong781@gmail.com">
+              <div class="field">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" />
+              </div>
+              <div class="field">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" />
+              </div>
+              <div class="field">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" rows="4"></textarea>
+              </div>
+              <ul class="actions">
+                <li><input type="submit" value="Send Message" /></li>
+              </ul>
+            </form>
+            <ul class="contact">
+              <li class="fa-home">
+                Kevin Duong<br />
+                San Jose, CA, 95130<br />
+              </li>
+              <li class="fa-phone">(408) 781-1798</li>
+              <li class="fa-envelope"><a href="mailto:kduong781@gmail.com">kduong781@gmail.com</a></li>
+              <li class="fa-facebook"><a href="http://facebook.com/KevDuong">facebook.com/KevDuong</a></li>
+              <li class="fa-linkedin"><a href="http://linkedin.com/in/kduong781">linkedin.com/in/kduong781</a></li>
+              <li class="fa-github"><a href="http://github.com/kduong781">github.com/kduong781</a></li>
+            </ul>
+            <ul class="copyright">
+              <li>&copy; Kevin Duong 2017 All rights reserved.</li><li>Design: HTML5 UP</li>
+            </ul>
+          </div>
+        </section>
 
 			</div>
 
