updated clion desc

--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
                     <article>
                       <a href="#" class="image"><img src="images/cloudlion.png" alt="" /></a>
                       <h3 class="major">Cloud Lion</h3>
-                      <p>A cloud based IDE web app that allows users to code online on a text editor with syntax highlighting. Uses Java, Spring Boot, SQL, Thymeleaf, Bootstrap, Jquery HTML, CSS, Javascript. </p>
+                      <p>A cloud based IDE web app that allows users to code online on a text editor with syntax highlighting. Uses Java, Spring Boot, SQL, Thymeleaf, Bootstrap, Jquery HTML, CSS, Javascript, Cloud9 Ace Text Editor. </p>
                       <a href="https://github.com/alekskivuls/CloudLion" class="special">Learn more</a>
                     </article>
 
